--- a/index.html
+++ b/index.html
@@ -32,27 +32,6 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
 
-    <script src="/assets/js/plugins/popper.min.js"></script>
-    <script src="/assets/js/plugins/simplebar.min.js"></script>
-    <script src="/assets/js/plugins/bootstrap.min.js"></script>
-    <script src="/assets/js/fonts/custom-font.js"></script>
-    <script src="/assets/js/pcoded.js"></script>
-    <script src="/assets/js/plugins/feather.min.js"></script>
-
-    <script>
-      layout_change('light')
-    </script>
-    <script>
-      change_box_container('false')
-    </script>
-    <script>
-      layout_rtl_change('false')
-    </script>
-    <script>
-      preset_change('preset-1')
-    </script>
-    <script>
-      font_change('Public-Sans')
-    </script>
+    <!-- Scripts desnecessários removidos para evitar erros 404 -->
   </body>
 </html>
